# aws-encryption-sdk-cli

./: .gitignore  .readthedocs.yaml  .releaserc  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  NOTICE  README.md  README.rst  SUPPORT_POLICY.rst  appveyor.yml  buildspec.yml  cfn.yml  park.cfg  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_static-analysis.yaml  ci_tests.yaml  coverage.yml  daily_ci.yml  install.yaml  pull.yml  push.yml  python-examples.yml  python-integration.yml
api_compatibility_tests/: MANIFEST.in  README.rst  setup.py  tox.ini
api_compatibility_tests/compatibility-requirements/: 1.7.0  1.8.0  1.9.0  1.9.1  1.9.2  2.0.0  2.1.0  2.2.0  2.2.1  2.2.2  3.0.0  3.1.0  3.1.1  4.0.0  4.1.0  4.2.0  4.3.0
api_compatibility_tests/test/: requirements.txt
api_compatibility_tests/test/integration/: test_api_compatibility.py
codebuild/: coverage.yml  python_27.yml  python_35.yml  python_36.yml  python_37.yml  python_38.yml
codebuild/py27/: examples.yml  integ.yml
codebuild/py310/: examples.yml  integ.yml
codebuild/py311/: examples.yml  integ.yml
codebuild/py312/: examples.yml  integ.yml
codebuild/py35/: examples.yml  integ.yml
codebuild/py36/: examples.yml  integ.yml
codebuild/py37/: examples.yml  integ.yml
codebuild/py38/: examples.yml  integ.yml
codebuild/py39/: examples.yml  integ.yml
codebuild/release/: prod-release.yml  test-release.yml  validate-api-compatibility.yml  validate-examples.yml  validate.yml
dev_requirements/: ci-requirements.txt  coverage-requirements.txt  doc-requirements.txt  linter-requirements.txt  release-requirements.txt  test-requirements.txt
doc/: conf.py  index.rst
examples/: README.rst  pytest.ini  requirements.txt  setup.py  tox.ini
examples/src/: pylintrc
examples/src/aws_encryption_sdk_cli_examples/: command_line_roundtrip.py  directory_roundtrip.py  example_test_utils.py  file_roundtrip.py  file_roundtrip_multiple_keys.py
examples/test/: requirements.txt  test_command_line_roundtrip.py  test_directory_roundtrip.py  test_file_roundtrip.py  test_file_roundtrip_multiple_keys.py
src/: pylintrc
src/aws_encryption_sdk_cli/: __init__.py  compatability.py  exceptions.py  key_providers.py
test/: pylintrc
test/integration/: README.rst  integration_test_utils.py  test_i_aws_encryption_sdk_cli.py  test_i_key_providers.py  test_i_logging_utils.py
test/unit/: test_arg_parsing.py  test_args_post_processing.py  test_aws_encryption_sdk_cli.py  test_compatability.py  test_encoding.py  test_io_handling.py  test_key_providers.py  test_logging_utils.py  test_master_key_parsing.py  test_metadata.py  unit_test_utils.py
(+18 files in other folders)
