[wheel]
universal = 1

[metadata]
license_file = LICENSE

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[mypy]
ignore_missing_imports = True

[tool:pytest]
markers =
    local: mark test as a test that does not require network access
    unit: mark test as a unit test
    functional: mark test as a functional test
    integ: mark a test as an integration test
