[wheel]
universal = 1

[metadata]
license_file = LICENSE

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[mypy]
ignore_missing_imports = True

[tool:pytest]
markers =
    local: mark test as a test that does not require network access
    unit: mark test as a unit test
    functional: mark test as a functional test
    integ: mark a test as an integration test

[flake8]
max_complexity = 10
max_line_length = 120
import_order_style = google
application_import_names = aws_encryption_sdk_cli
builtins = raw_input
ignore =
    # Ignoring D205 and D400 because of false positives
    D205, D400,
    # Ignoring D401 pending discussion of imperative mood
    D401

[doc8]
max-line-length = 120
