[wheel]
universal = 1

[metadata]
license_file = LICENSE

[coverage:run]
branch = True

[coverage:report]
show_missing = True
fail_under = 70

[mypy]
ignore_missing_imports = True

[tool:pytest]
markers =
    local: superset of unit and functional (does not require network access)
    unit: mark test as a unit test (does not require network access)
    functional: mark test as a functional test (does not require network access)
    integ: mark a test as an integration test (requires network access)
    examples: mark a test as an example (requires network access)

[flake8]
max_complexity = 10
max_line_length = 120
import_order_style = google
application_import_names = aws_encryption_sdk_cli
builtins = raw_input
ignore =
    # Ignoring D205 and D400 because of false positives
    D205, D400,
    # Ignoring D401 pending discussion of imperative mood
    D401,
    # E203 is not PEP8 compliant https://github.com/ambv/black#slices
    E203,
    # W503 is not PEP8 compliant https://github.com/ambv/black#line-breaks--binary-operators
    W503

[doc8]
max-line-length = 120

[isort]
line_length = 120
# https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
known_first_party = aws_encryption_sdk_cli
known_third_party = attr,aws_encryption_sdk,base64io,boto3,botocore,mock,pkg_resources,pytest,pytest_mock,setuptools,six
